// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Component) Button (Render) snapshot Should be disabled 1`] = `
<button
  className="btn  disabled"
  disabled={true}
  onClick={[Function]}
>
  <span>
    Click Me!
  </span>
</button>
`;

exports[`(Component) Button (Render) snapshot Should have className 1`] = `
<button
  className="btn button button--class disabled"
  disabled={true}
  onClick={[Function]}
>
  <span />
</button>
`;

exports[`(Component) Button (Render) snapshot Should render spinner when loading 1`] = `
<button
  className="btn  disabled"
  disabled={false}
  onClick={[Function]}
>
  <Spinner />
</button>
`;

exports[`(Component) Button (Render) snapshot Should render the text 1`] = `
<button
  className="btn "
  disabled={false}
  onClick={[Function]}
>
  <span>
    Click Me!
  </span>
</button>
`;
